# canvas

./: canvas.cabal  stack.yaml
canvas/: canvas.cabal
canvas-sample/: canvas-sample.cabal
canvas-sample/lib/: Sample.hs
canvas-sample/src/: Arc.hs  Circle.hs  Rectangle.hs  RoundRect.hs  StripPath.hs  Texture.hs  TextureCircle.hs  Triangle.hs
canvas/shader/: arc-fragment.glsl  arc-vertex.glsl  line-fragment.glsl  line-vertex.glsl  triangle-fragment.glsl  triangle-vertex.glsl
canvas/src/Graphics/: Canvas.hs
canvas/src/Graphics/Canvas/: Geometry.hs  Types.hs
canvas/src/Graphics/Canvas/Rendering/: OpenGL.hs
canvas/src/Graphics/Canvas/Rendering/OpenGL/: Vertex.hs
sample/: Arc.hs  Circle.hs  Main.hs  Rectangle.hs  RoundRect.hs  StripPath.hs  Texture.hs  Triangle.hs
shader/: arc-fragment.glsl  arc-vertex.glsl  circle-fragment.glsl  circle-vertex.glsl  fragment.glsl  line-fragment.glsl  line-vertex.glsl  textured-fragment.glsl  textured-vertex.glsl  triangle-fragment.glsl  triangle-vertex.glsl  vertex.glsl
src/Graphics/Canvas/: Types.hs
src/Graphics/Canvas/Rendering/: OpenGL.hs
src/Graphics/Canvas/Rendering/OpenGL/: Vertex.hs
