name:                canvas
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/canvas#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.Canvas
                     , Graphics.Canvas.Types
                     , Graphics.Canvas.Rendering.OpenGL
                     , Graphics.Canvas.Rendering.OpenGL.Vertex
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , linear
                     , OpenGL
                     , file-embed
                     , transformers
                     , resourcet
                     , extensible
                     , constraints
                     , vector
  default-language:    Haskell2010
  ghc-options: -O2 -Wall

executable triangle-sample
  hs-source-dirs:      sample
  main-is:             Triangle.hs
  build-depends:       base >= 4.7 && < 5
                     , linear
                     , OpenGL
                     , GLFW-b
                     , canvas
                     , transformers
                     , resourcet
  default-language:    Haskell2010

executable rectangle-sample
  hs-source-dirs:      sample
  main-is:             Rectangle.hs
  build-depends:       base >= 4.7 && < 5
                     , linear
                     , OpenGL
                     , GLFW-b
                     , canvas
                     , transformers
                     , resourcet
  default-language:    Haskell2010

executable circle-sample
  hs-source-dirs:      sample
  main-is:             Circle.hs
  build-depends:       base >= 4.7 && < 5
                     , linear
                     , OpenGL
                     , GLFW-b
                     , canvas
                     , transformers
                     , resourcet
  default-language:    Haskell2010

executable roundrect-sample
  hs-source-dirs:      sample
  main-is:             RoundRect.hs
  build-depends:       base >= 4.7 && < 5
                     , linear
                     , OpenGL
                     , GLFW-b
                     , canvas
                     , transformers
                     , resourcet
  default-language:    Haskell2010


executable arc-sample
  hs-source-dirs:      sample
  main-is:             Arc.hs
  build-depends:       base >= 4.7 && < 5
                     , linear
                     , OpenGL
                     , GLFW-b
                     , canvas
                     , transformers
                     , resourcet
  default-language:    Haskell2010

executable strippath-sample
  hs-source-dirs:      sample
  main-is:             StripPath.hs
  build-depends:       base >= 4.7 && < 5
                     , linear
                     , OpenGL
                     , GLFW-b
                     , canvas
                     , transformers
                     , resourcet
  default-language:    Haskell2010
